--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,24 @@
+alembic==1.1.0
 certifi==2019.9.11
 chardet==3.0.4
 Click==7.0
 Flask==1.1.1
+Flask-Migrate==2.5.2
+Flask-SQLAlchemy==2.4.0
 idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10.1
+Mako==1.1.0
 MarkupSafe==1.1.1
 numpy==1.17.2
 pandas==0.25.1
+psycopg2==2.8.3
 python-dateutil==2.8.0
 python-dotenv==0.10.3
+python-editor==1.0.4
 pytz==2019.2
 requests==2.22.0
 six==1.12.0
+SQLAlchemy==1.3.8
 urllib3==1.25.3
 Werkzeug==0.15.6
