--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ Mako==1.1.0
 MarkupSafe==1.1.1
 numpy==1.17.2
 pandas==0.25.1
+psycopg2==2.8.3
 python-dateutil==2.8.0
 python-dotenv==0.10.3
 python-editor==1.0.4
